tests/snapshots/examples_fixtures/type_system__failing__128_lambda_missing_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/128_lambda_missing_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` after lambda parameters, found `IDENT`.

  --> examples/type_system/failing/128_lambda_missing_arrow.flx:1:12
  |
1 | let f = /x x + 1
  |            ^

Hint:
  Use `/x -> expr` or `/(x, y) -> expr`.
== stdout ==
<not executed>
